--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -3,7 +3,7 @@
     <div class="card">
       <div class="card-header">
         <h3 class="card-title"><%= @user.name %></h3>
-      </div>
+      </div>  
       <div class="card-body">
         <img class="rounded img-fluid" src="<%= gravatar_url(@user, { size: 500 }) %>" alt="">
       </div>
@@ -16,6 +16,6 @@
       <li class="nav-item"><a href="<%= followings_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(followings_user_path(@user)) %>">Followings  <span class="badge bg-secondary"><%= @count_followings %></span></a></li>
       <li class="nav-item"><a href="<%= followers_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(followers_user_path(@user)) %>">Followers  <span class="badge bg-secondary"><%= @count_followers %></span></a></li>
     </ul>
-    <%= render 'microposts/microposts', microposts: @microposts %>
+    <%= render "users", users: @followers %>
   </div>
 </div>
