--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,6 +18,9 @@
             <li class="dropdown-divider"></li>
             <li class="dropdown-item">><%= link_to 'Logout', logout_path, method: :delete, class: 'nav-link' %></li>
           </ul>
+          <ul class="navbar-nav">
+            <li class="ms-3"><%= link_to "Favorite", likes_user_path(current_user), class: "nav-link" %></li>
+          </ul>
         </div>  
         <% else %>
         <ul class="navbar-nav">
